[package]
name = "framix"
version = "0.1.1"
edition = "2021"
description = "A simple yet powerful Rust-based video editor wrapper for FFmpeg"
license = "MIT"
repository = "https://github.com/pritamp20/framix"
keywords = ["ffmpeg", "video", "editor", "cli", "timelapse"]
categories = ["multimedia::video", "command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive"] }
