[package]
name = "framix"
version = "0.1.2"
edition = "2021"
description = "A simple yet powerful Rust-based video editor wrapper for FFmpeg"
license = "MIT"
repository = "https://github.com/pritamp20/framix"
keywords = ["ffmpeg", "video", "editor", "cli", "fast forward"]
categories = ["multimedia::video", "command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
regex = "1.12.2"
